--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <p>
                 We have games that we have made in Scratch and Stencyl. There are download links for all of the games. The credits are also available.
             </p>
+            <br>
+            <a href="https://vinyeagle.github.io/vinyeaglegaming/">VinyEagle Gaming and Entertainment</a>
+            <a href="https://geparsons.github.io/GEParsons-Website/">GEParsons</a>
+            <a href="lungsofflames.weebly.com">Lungs Of Flames</a>
             <table>
                 <tr>
                     <td><img style="float: left;" src="images/stencyl.jpeg" /></td>
