--- a/Stencyl/index.html
+++ b/Stencyl/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="logo">TKVEFBANGN</h1>
+        <h1 class="logo">Viridian Blue</h1>
         <img class="logo" src="../images/logo.gif" height="30" width="30" alt="Viridian Blue logo" />
         <nav>
             <a id="speciallink" href="../Stencyl/index.html">Stencyl</a>
